--- a/border.html
+++ b/border.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="color.css">
+    <link rel="stylesheet" href="border.css">
 </head>
 <body>
-    <h1>Colors</h1>
+    <h1>Border</h1>
 
     <p class="box1">Lorem ipsum dolor sit amet.</p>
     <p class="box2">Lorem ipsum dolor sit amet.</p>
@@ -15,5 +15,6 @@
     <p class="box4">Lorem ipsum dolor sit amet.</p>
     <p class="box5">Lorem ipsum dolor sit amet.</p>
     <p class="box6">Lorem ipsum dolor sit amet.</p>
+    <p class="box7">Lorem</p>
 </body>
 </html>
